syntax = "proto3";

package users;
option go_package = "./pb";

service UsersService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc SignIn(SignInRequest) returns (SignInResponse) {}
  rpc CheckHealth() returns (CheckHealthResponse) {}
}

message SignUpRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message SignUpResponse {
  int64 user_id = 1;
}

message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignInResponse {
  int64 user_id = 1;
}

// less is better
message CheckHealthResponse {
  float health = 1;
} 